// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/HomeControl/Lights/StatusIcon Should render correctly (off) 1`] = `
.c0 svg {
  cursor: pointer;
  font-size: 50px;
  margin-right: 12px;
  opacity: 0.24;
}

<span
  className="c0"
>
  <Icon
    onClick={[Function]}
  />
</span>
`;

exports[`ui/HomeControl/Lights/StatusIcon Should render correctly (on) 1`] = `
.c0 svg {
  cursor: pointer;
  font-size: 50px;
  margin-right: 12px;
  opacity: 1;
}

<span
  className="c0"
>
  <Icon
    onClick={[Function]}
  />
</span>
`;
